# ubuntu-kylin-docs

./: AUTHORS  MAINTAINERS  Makefile.am  README  TODO  autogen.sh  collect-screenshots.sh  configure.in  update-translations.sh
debian/: changelog  control  copyright  files  rules  ubuntu-kylin-docs.preinst
html/: Makefile  Makefile-ubuntu-docs  fix-urls.sed  ubuntu.xsl
html/img/: header_logo.png.bak
libs/: mallard-1.0.rng
scripts/: check-makefile.sh  check-status.sh  schematron.sh  translation-test-build.sh  translations-syntax-fix.sh  update-translations.sh  validate.sh
scripts/non-working/: collect-screenshots.sh
ubuntu-kylin-help/: Makefile.am  Makefile.am-ubuntu-docs  ubuntu-help.pot  ubuntu-kylin-help.pot
ubuntu-kylin-help/C/: a11y-bouncekeys.page  a11y-braille.page  a11y-contrast.page  a11y-dwellclick.page  a11y-font-size.page  a11y-locate-pointer.page.stub  a11y-mag.stub  a11y-right-click.page  a11y-screen-reader.page  a11y-slowkeys.page  a11y-stickykeys.page  a11y-visualalert.page  a11y.page  about-this-guide.page  accounts-add.page  accounts-disable-service.page  accounts-provider-not-available.page  accounts-remove.page  accounts-which-application.page  accounts-whyadd.page  accounts.page  addremove-install-synaptic.page  addremove-install.page  addremove-ppa.page  addremove-remove.page  addremove-sources.page  addremove.page  app-banshee.page.stub  app-cheese.page  backup-check.page  backup-frequency.page  backup-how.page  backup-restore.page  backup-thinkabout.page  backup-what.page  backup-where.page  backup-why.page  bluetooth-connect-device.page  bluetooth-problem-connecting.page  bluetooth-remove-connection.page  (+331 more)
ubuntu-kylin-help/C/unity-stubs/: unity-appmenu-intro.page  unity-dash-intro.page  unity-dash-startup.page  unity-launcher-dash.page  unity-launcher-intro.page  unity-launcher-keyboard.page  unity-stub.page.tmpl
ubuntu-kylin-help/zh_CN/: zh_CN.po
