@YELP_HELP_RULES@

HELP_ID = ubuntu-kylin-help

HELP_LINGUAS = zh_CN

HELP_MEDIA = \
	figures/audio-volume-high-panel.svg \
	figures/battery-100.svg \
	figures/bluetooth-active.svg \
	figures/color-average.png \
	figures/color-camera.png \
	figures/color-display.png \
	figures/color-printer.png \
	figures/color-profile-default.png \
	figures/color-space.png \
	figures/go-down.png \
	figures/indicator-keyboard-En.svg \
	figures/indicator-messages.svg \
	figures/input-keyboard-symbolic.svg \
	figures/input-preferences.png \
	figures/nautilus.png \
	figures/nautilus-icons.png \
	figures/network-offline.svg \
	figures/printing-select.png \
	figures/system-devices-panel.svg \
	figures/ubuntu-logo.png \
	figures/ubuntu-mascot-creature.png \
	figures/unity.png \
	figures/unity-appmenu-intro.png \
	figures/unity-dash-intro.png \
	figures/unity-dash.png \
	figures/unity-dash-sample.png \
	figures/unity-exit.png \
	figures/unity-launcher-apps.png \
	figures/unity-launcher-intro.png \
	figures/unity-launcher.png \
	figures/unity-overview.png \
	figures/unity-windows.png \
	figures/unity-workspace-intro.png \
	figures/ukui/1-ukui.png \
	figures/ukui/2-ukui-menu.png \
	figures/ukui/3-ukui-contro-center.png \
	figures/ukui/4-peony.png 

HELP_FILES = \
	legal.xml \
	a11y-bouncekeys.page \
	a11y-braille.page \
	a11y-contrast.page \
	a11y-dwellclick.page \
	a11y-font-size.page \
	a11y.page \
	a11y-right-click.page \
	a11y-screen-reader.page \
	a11y-slowkeys.page \
	a11y-stickykeys.page \
	a11y-visualalert.page \
	about-this-guide.page \
	accounts.page \
	accounts-add.page \
	accounts-disable-service.page \
	accounts-provider-not-available.page \
	accounts-remove.page \
	accounts-which-application.page \
	accounts-whyadd.page \
	addremove-install-synaptic.page \
	addremove-install.page \
	addremove-ppa.page \
	addremove-remove.page \
	addremove-sources.page \
	addremove.page \
	app-cheese.page \
	backup-check.page \
	backup-frequency.page \
	backup-how.page \
	backup-restore.page \
	backup-thinkabout.page \
	backup-what.page \
	backup-where.page \
	backup-why.page \
	bluetooth.page \
	bluetooth-connect-device.page \
	bluetooth-problem-connecting.page \
	bluetooth-remove-connection.page \
	bluetooth-send-file.page \
	bluetooth-turn-on-off.page \
	bluetooth-visibility.page \
	color-assignprofiles.page \
	color-calibrate-camera.page \
	color-calibrate-printer.page \
	color-calibrate-scanner.page \
	color-calibrate-screen.page \
	color-calibrationcharacterization.page \
	color-calibrationdevices.page \
	color-calibrationtargets.page \
	color-canshareprofiles.page \
	color-gettingprofiles.page \
	color-howtoimport.page \
	color-missingvcgt.page \
	color-notifications.page \
	color-notspecifiededid.page \
	color.page \
	color-testing.page \
	color-virtualdevice.page \
	color-whatisprofile.page \
	color-whatisspace.page \
	color-why-calibrate.page \
	color-whyimportant.page \
	contacts-add-remove.page \
	contacts-connect.page \
	contacts-edit-details.page \
	contacts-link-unlink.page \
	contacts.page \
	contacts-search.page \
	contacts-setup.page \
	clock.page \
	clock-calendar.page \
	clock-more-info.page \
	clock-set.page \
	clock-timezone.page \
	disk.page \
	disk-benchmark.page \
	disk-capacity.page \
	disk-check.page \
	disk-format.page \
	disk-partitions.page \
	display-dimscreen.page \
	display-dual-monitors-desktop.page \
	display-dual-monitors.page \
	display-lock.page \
	documents-collections.page \
	documents-filter.page \
	documents-formats.page \
	documents-info.page \
	documents.page \
	documents-previews.page \
	documents-print.page \
	documents-search.page \
	documents-select.page \
	documents-tracker.page \
	documents-viewgrid.page \
	documents-view.page \
	files-autorun.page \
	files-browse.page \
	files-copy.page \
	files-delete.page \
	files-disc-write.page \
	files-hidden.page \
	files-lost.page \
	files-open.page \
	files.page \
	files-preview.page \
	files-recover.page \
	files-removedrive.page \
	files-rename.page \
	files-search.page \
	files-select.page \
	files-share.page \
	files-sort.page \
	files-templates.page \
	files-tilde.page \
	get-involved.page \
	hardware-driver.page \
	hardware-driver-proprietary.page \
	hardware.page \
	hardware-cardreader.page \
	hardware-problems-graphics.page \
	index.page \
	keyboard.page \
	keyboard-cursor-blink.page \
	keyboard-layouts.page \
	keyboard-nav.page \
	keyboard-osk.page \
	keyboard-repeat-keys.page \
	keyboard-shortcuts-set.page \
	look-background.page \
	look-display-fuzzy.page \
	look-resolution.page \
	media.page \
	more-help.page \
	mouse.page \
	mouse-disabletouchpad.page \
	mouse-doubleclick.page \
	mouse-lefthanded.page \
	mouse-middleclick.page \
	mouse-mousekeys.page \
	mouse-problem-notmoving.page \
	mouse-sensitivity.page \
	mouse-touchpad-click.page \
	mouse-wakeup.page \
	music-cantplay-drm.page \
	music-player-ipodtransfer.page \
	music-player-newipod.page \
	music-player-notrecognized.page \
	nautilus-behavior.page \
	nautilus-bookmarks-edit.page \
	nautilus-connect.page \
	nautilus-display.page \
	nautilus-file-properties-basic.page \
	nautilus-file-properties-permissions.page \
	nautilus-list.page \
	nautilus-prefs.page \
	nautilus-preview.page \
	nautilus-views.page \
	net-antivirus.page \
	net-browser.page \
	net-chat.page \
	net-chat-empathy.page \
	net-chat-skype.page \
	net-chat-social.page \
	net-chat-video.page \
	net-default-browser.page \
	net-default-email.page \
	net-email.page \
	net-email-virus.page \
	net-findip.page \
	net-firewall-on-off.page \
	net-firewall-ports.page \
	net-fixed-ip-address.page \
	net-general.page \
	net-install-flash.page \
	net-install-java-plugin.page \
	net-install-moonlight.page \
	net-macaddress.page \
	net-manual.page \
	net-mobile.page \
	net-nonm.page \
	net-othersconnect.page \
	net-othersedit.page \
	net.page \
	net-problem.page \
	net-proxy.page \
	net-security.page \
	net-security-tips.page \
	net-slow.page \
	net-vpn-connect.page \
	net-what-is-ip-address.page \
	net-wired.page \
	net-wired-connect.page \
	net-wireless.page \
	net-wireless-adhoc.page \
	net-wireless-airplane.page \
	net-wireless-connect.page \
	net-wireless-disconnecting.page \
	net-wireless-edit-connection.page \
	net-wireless-find.page \
	net-wireless-hidden.page \
	net-wireless-noconnection.page \
	net-wireless-troubleshooting.page \
	net-wireless-troubleshooting-device-drivers.page \
	net-wireless-troubleshooting-hardware-check.page \
	net-wireless-troubleshooting-hardware-info.page \
	net-wireless-troubleshooting-initial-check.page \
	net-wireless-wepwpa.page \
	net-wrongnetwork.page \
	numeric-keypad.page \
	power-batterybroken.page \
	power-batteryestimate.page \
	power-batterylife.page \
	power-batteryoptimal.page \
	power-batteryslow.page \
	power-batterywindows.page \
	power-closelid.page \
	power-constantfan.page \
	power-hibernate.page \
	power-hotcomputer.page \
	power-lowpower.page \
	power-nowireless.page \
	power-othercountry.page \
	power.page \
	power-suspendfail.page \
	power-suspend.page \
	power-whydim.page \
	power-willnotturnon.page \
	prefs.page \
	prefs-language-install.page \
	prefs-language.page \
	prefs-display.page \
	printing.page \
	printing-2sided.page \
	printing-cancel-job.page \
	printing-differentsize.page \
	printing-envelopes.page \
	printing-inklevel.page \
	printing-order.page \
	printing-paperjam.page \
	printing-select.page \
	printing-setup-default-printer.page \
	printing-setup.page \
	printing-streaks.page \
	report-ubuntu-bug.page \
	screen-shot-record.page \
	session-formats.page \
	session-language.page \
	session-screenlocks.page \
	sharing.page \
	sharing-bluetooth.page \
	sharing-desktop.page \
	shell-apps-favorites.page \
	shell-exit.page \
	shell-guest-session.page \
	shell-keyboard-shortcuts.page \
	shell-overview.page \
	shell-windows-maximize.page \
	shell-windows.page \
	shell-windows-states.page \
	shell-windows-switching.page \
	shell-windows-tiled.page \
	shell-workspaces-movewindow.page \
	shell-workspaces.page \
	shell-workspaces-switch.page \
	sound-alert.page \
	sound-broken.page \
	sound-crackle.page \
	sound-nosound.page \
	sound-usemic.page \
	sound-usespeakers.page \
	sound-volume.page \
	startup-applications.page \
	tips.page \
	tips-specialchars.page \
	uk-calendar.page \
	uk-dash-music.page \
	uk-dash.page \
	uk-dash-photo.page \
	uk-dash-video.page \
	uk-fcitx.page \
	uk-fcitx-qimpanel-skin.page \
	uk-fcitx-qimpanel-wordlist.page \
	uk-fcitx-sogou-shortcuts.page \
	uk-fcitx-sogou-wordlist.page \
	uk.page \
	uk-software-center.page \
	uk-weather.page \
	uk-wps.page \
	uk-wps-presentations.page \
	uk-wps-spreadsheets.page \
	uk-wps-writer.page \
	uk-youker-assistant.page \
	uk-youker-ball.page \
	uk-youker-clean.page \
	uk-youker-home.page \
	uk-youker-info.page \
	uk-youker-personalize.page \
	uk-youker-tool.page \
	unity-dash-apps.page \
	unity-dash-files.page \
	unity-dash-friends.page \
	unity-dash-intro.page \
	unity-dash-music.page \
	unity-dash-photos.page \
	unity-dash-video.page \
	unity-hud-intro.page \
	unity-introduction.page \
	unity-launcher-change-autohide.page \
	unity-launcher-change-size.page \
	unity-launcher-intro.page \
	unity-launcher-menu.page \
	unity-launcher-shapes.page \
	unity-menubar-intro.page \
	unity-scrollbars-intro.page \
	unity-shopping.page \
	user-accounts.page \
	user-add.page \
	user-admin-change.page \
	user-admin-explain.page \
	user-admin-problems.page \
	user-changepassword.page \
	user-changepicture.page \
	user-delete.page \
	user-forgottenpassword.page \
	user-goodpassword.page \
	video-dvd.page \
	video-dvd-restricted.page \
	video-sending.page \
	wacom-left-handed.page \
	wacom-mode.page \
	wacom-multi-monitor.page \
	wacom.page \
	wacom-stylus.page \
	windows-key.page \
    whats-new.page

dist-hook: doc-dist-hook
